# undefined

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  config.py  main.py  openapi.yaml  pyproject.toml
backend/apis/: __init__.py  test.py  users.py
backend/apis/schemas/: __init__.py  user.py
database/: .env  README.md  dockerfile  init.sql  main.py  pyproject.toml
database/apis/: __init__.py  orders.py  posts.py  test.py  user.py
database/apis/schemas/: __init__.py  posts.py  user.py
database/databases/: congif.py
database/databases/cruts/: posts.py  users.py
database/databases/model/: Depends.py  models.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: test_cookie_direct.html
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  http.js  posts.js
frontend/src/components/Layout/: Footer.jsx  Header.jsx
frontend/src/pages/: AboutPage.jsx  ContactsPage.jsx  EditorPage.jsx  EditorPostForm.jsx  HomePage.jsx  LoginPage.jsx  NewsPage.jsx  ProjectsPage.jsx  ServicesPage.jsx  TeamPage.jsx
frontend/src/style/: Footer.css  homePage.css
nginx/: dockerfile  nginx.conf
post_dk/: Dockerfile  config.py  main.py  pyproject.toml
post_dk/apis/: __init__.py  posts.py
post_dk/apis/schemas/: posts.py
